fix(style/accordion): specify `overflow-x` and `overflow-y`

--- a/styles/accordion.module.scss
+++ b/styles/accordion.module.scss
@@ -27,5 +27,7 @@
     border-radius:      2px;
     margin:             0.25em 0.25em;
     padding:            0.5em 0.5em;
+    overflow-x:         auto;
+    overflow-y:         hidden;
   }
 }
